align lists to left, fix #7419

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1232,7 +1232,6 @@ th, td {}
 .tab_cadre th, .tab_cadre_fixe th, .tab_cadre_fixehov th, .tab_cadrehov th, h2.header {
    font-size: 12px;
    font-weight: bold;
-   text-align: center;
    border-radius: 4px;
    padding: 2px;
    border-radius: 0;
